Remove default home page content and footer, fix grid background visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,8 @@ body {
     padding: 0;
     /* full-page subtle grid background */
     background-color: #ffffff;
-    background-image: url('../grid.svg');
+    background-image: url('../Grid.svg');
     background-repeat: repeat;
-    background-size: 60px 60px;
     background-position: center;
     color: #333;
 }
